<resources>
    <string name="empty"></string>
    <string name="app_name">Moje Śmieci</string>

    <string name="trash_schedule_nodate">Brak danych</string>

    <string name="menu_action_refresh">Odświerz</string>
    <string name="menu_action_add">Dodaj</string>
    <string name="menu_action_edit">Edytuj</string>
    <string name="menu_action_delete">Usuń</string>
    <string name="menu_action_settings">Ustawienia</string>
    <string name="menu_action_about">O aplikacji</string>


    <string name="about_description1">Aplikacja Moje Śmieci powstałą na zaliczenie projektu z przedmiotu WPAM na Politechnice warszawskiej.</string>
    <string name="about_description2">Aplikacja jest otwarto źdródłowa i nie jest planowane dalsze jej rozwiajanie.</string>
    <string name="github_link">https://github.com/jedrzejowski/wpam-project</string>

    <string name="about_icons8">Ikona aplikacji pochodzi z Icons8</string>
    <string name="icons8_link">https://icons8.com/</string>

    <string name="about_author">Autor:\nAdam Jędrzejowski\nadam@jedrzejowski.pl</string>

    <string name="dialog_delete_title">Czy usunąć punkt śmieciowy</string>
    <string name="dialog_delete_cancel">Anuluj</string>
    <string name="dialog_delete_delete">Usuń</string>

    <string name="dialog_edit_title">Punkt śmieciowy</string>
    <string name="dialog_edit_fullName">Pełna nazwa</string>
    <string name="dialog_edit_customName">Nazwa własna</string>
    <string name="dialog_edit_id">ID</string>
    <string name="dialog_edit_save">Zapisz</string>
    <string name="dialog_edit_cancel">Anuluj</string>
    <string name="dialog_edit_delete">Usuń</string>

    <string name="dialog_new_title">Nowy punkt śmieciowy</string>
    <string name="dialog_new_hint">Wyszukaj punkt śmieciowy</string>
    <string name="dialog_new_cancel">Anuluj</string>


    <string name="error_dataprovider">Błąd podczas łączenia z dostawcą usługi</string>

    <string name="settings_title">Ustawienia</string>
    <string name="settings_background_title">Proces w tle</string>
    <string name="settings_background_sync">Powiadomienia w tle</string>


    <string name="notification_channel1_id">channel1</string>
    <string name="notification_channel1_name">Powiadominienia o wywozie</string>
    <string name="notification_channel1_description">Powiadomienia o jutrzejszym wywozie śmieci</string>
    <string name="notification_channel1_title_evening">Jutro wywożą śmieci</string>
    <string name="notification_channel1_title_morning">Dziś wywożą śmieci</string>
    <string name="notification_channel1_line_prefix">&#8226;&#160;</string>
    <string name="notification_channel1_line_separator">, </string>
    <string name="notification_channel1_line_suffix">&#160;na %1$s\n</string>


</resources>
